# JSSEnv

./: .gitignore  .travis.yml  BASELINE_EVALUATION_README.md  CONTRIBUTING.md  MANIFEST.in  MOREINFO.md  POLICY_EVALUATION_RESULTS.md  README.md  debug_episode.py  dqn_vs_baselines_test.py  jss_run.csv  main.py  modified_train_dqn.py  output.txt  plot_script.py  pyproject.toml  requirements.txt  rllib-validate-env.py  run_baseline_evaluation.py  setup.py  setup.txt  test_baselines.py  train.py  train_dqn.py  train_init.py  train_ppo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
JSSEnv/: __init__.py  dispatching.py  utils.py  version.py
JSSEnv/envs/: JssEnv.py  __init__.py  jss_env.py  registry.py
baselines/: __init__.py  base_policy.py  critical_path_policy.py  evaluate.py  lwkr_policy.py  random_policy.py  simulated_annealing.py  spt_policy.py  utils.py
baselines/tests/: mock_env.py  test_random_policy.py  test_simulated_annealing.py  test_spt_policy.py
examples/: dispatching_rules_example.py
models/: dqn_improved_model.pth  dqn_improved_target_model.pth  dqn_model.pth  dqn_target_model.pth
runs/dqn/: events.out.tfevents.1748927528.mbiehler.69072.0  events.out.tfevents.1748927675.mbiehler.65012.0  events.out.tfevents.1748927759.mbiehler.50196.0  events.out.tfevents.1748928045.mbiehler.50316.0  (+8 more)
tests/: __init__.py  test_dispatching.py  test_rendering.py  test_solutions.py  test_state.py  tests_rendering.py  tests_solutions.py
(+9 files in other folders)
