[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JSSEnv"
version = "1.1.0"
description = "An optimized OpenAi gym's environment to simulate the Job-Shop Scheduling problem."
readme = "README.md"
authors = [
    {name = "Pierre Tassel", email = "pierre.tassel@aau.at"}
]
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Dependencies are handled in setup.py to allow for Python version-specific requirements

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "codecov>=2.1.0",
    "build>=1.0.0",
    "wheel>=0.40.0",
]

[tool.setuptools.dynamic]
version = {attr = "JSSEnv.__version__"}

[tool.setuptools.packages.find]
include = ["JSSEnv*"]